force-app/main/default/objects/dx_IconManagement__mdt/dx_IconManagement__mdt.object-meta.xml
<CustomObject>
    <description>Holds information about an icon, the text to display, alt text, and navigation link</description>
    <label>dx_IconManagement</label>
    <pluralLabel>dx_IconManagement</pluralLabel>
</CustomObject>