force-app/main/default/objects/dx_IconManagement__mdt/fields/AltText__c.field-meta.xml
<CustomField>
    <fullName>AltText__c</fullName>
    <description>Text for Screen readers and when Icons aren't visible</description>
    <label>AltText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>