force-app/main/default/objects/dx_IconManagement__mdt/fields/IconFileName__c.field-meta.xml
<CustomField>
    <fullName>IconFileName__c</fullName>
    <description>Name of the icon in the agreed upon resource file.  The developer dictates the format of this field.   Current standard is to hold the foldername and filename with extension in this field.</description>
    <label>IconFileName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>