force-app/main/default/objects/dx_IconManagement__mdt/fields/Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Page_URL__c</fullName>
    <description>URL of the community page for navigation purposes.  typically, this is the pagename following the /s/ in the community URL</description>
    <label>Page URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>