force-app/main/default/objects/dx_IconManagement__mdt/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Holds the title of the icon - This is the hover text for the Icon</description>
    <label>Title</label>
    <type>TextArea</type>
</CustomField>